# Non-Obtuse_Triangulations_of_PSLG

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  analyze_parameters.py  automate.py  cmake_install.cmake  ex.cpp  example  graphs.py  qrc_CGAL.cpp  qrc_File.cpp  qrc_Input.cpp  qrc_Triangulation_2.cpp
CGAL_Qt5_moc_and_resources_autogen/: moc_predefs.h  mocs_compilation.cpp
CGAL_Qt5_moc_and_resources_autogen/5WVQWKLFLZ/: moc_DemosMainWindow.cpp  moc_DemosMainWindow.cpp.d  moc_GraphicsItem.cpp  moc_GraphicsItem.cpp.d  moc_GraphicsViewInput.cpp  moc_GraphicsViewInput.cpp.d  moc_GraphicsViewNavigation.cpp  moc_GraphicsViewNavigation.cpp.d  moc_camera.cpp  moc_camera.cpp.d  moc_frame.cpp  moc_frame.cpp.d  moc_image_interface.cpp  moc_image_interface.cpp.d  moc_keyFrameInterpolator.cpp  moc_keyFrameInterpolator.cpp.d  moc_manipulatedCameraFrame.cpp  moc_manipulatedCameraFrame.cpp.d  moc_manipulatedFrame.cpp  moc_manipulatedFrame.cpp.d  moc_qglviewer.cpp  moc_qglviewer.cpp.d
output_files/outputs_A/: output_point-set_100_0245ce31.instance.json  output_point-set_100_05594822.instance.json  output_point-set_100_dd67678e.instance.json  output_point-set_10_13860916.instance.json  output_point-set_10_4bcb7c21.instance.json  output_point-set_10_7451a2a9.instance.json  output_point-set_10_97578aae.instance.json  output_point-set_10_ae0fff93.instance.json  output_point-set_10_c04b0024.instance.json  output_point-set_10_d009159f.instance.json  output_point-set_150_1fb326cf.instance.json  output_point-set_150_20bcb550.instance.json  output_point-set_150_982c9ab3.instance.json  output_point-set_150_b26a2c80.instance.json  output_point-set_20_0c4009d9.instance.json  output_point-set_20_34a047f7.json  output_point-set_20_41c48315.instance.json  output_point-set_20_54ab0b47.instance.json  output_point-set_20_5868538a.instance.json  output_point-set_20_72cd2066.instance.json  output_point-set_20_fa3fd7e0.instance.json  output_point-set_250_3c338713.instance.json  (+17 more)
utils/: algorithms.cpp  new.cpp  utils.cpp  utils.hpp
verify/: verification_results.py
(+82 files in other folders)
